Fixed spacing around the search bar

--- a/Pokedex/Pokedex/wwwroot/css/main.css
+++ b/Pokedex/Pokedex/wwwroot/css/main.css
@@ -7,7 +7,7 @@
 }
 
 #search {
-  max-width: 175px;
+  width: 10rem;
 }
 
 .generatorSection {
@@ -110,6 +110,7 @@ hr.dropdown-line {
 
 .reset-button {
   color: gray;
+  margin-left: 5px;
 }
 
 .search-bar {
@@ -330,11 +331,35 @@ a {
   margin-right: 10px;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 855px){
+  .navbar-expand-custom {
+      flex-direction: row;
+      flex-wrap: nowrap;
+      justify-content: flex-start;
+  }
+  .navbar-expand-custom .navbar-nav {
+      flex-direction: row;
+  }
+  .navbar-expand-custom .navbar-nav .nav-link {
+      padding-right: .5rem;
+      padding-left: .5rem;
+  }
+  .navbar-expand-custom .navbar-collapse {
+      display: flex!important;
+  }
+  .navbar-expand-custom .navbar-toggler {
+      display: none;
+  }
   .search-bar {
     margin: 0;
   }
   .main {
     margin-top: 70px;
+  }
+}
+
+@media (max-width: 359px){
+  .search-bar {
+    margin-bottom: 2.7rem;
   }
 }
